runtime_eks/tests/us-east-1/application.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: application
spec:
  selector:
    app: application
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: application
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: application
  template:
    metadata:
      labels:
        app: application
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      serviceAccountName: application
      containers:
      - name: application
        image: nicholasjackson/fake-service:v0.25.1
        ports:
        - containerPort: 9090
        env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:9090"
        - name: "UPSTREAM_URIS"
          value: "http://database.virtual.consul"
        - name: "NAME"
          value: "application-us-east-1"
        - name: "MESSAGE"
