runtime_eks/tests/us-east-1/database.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
    spec:
      serviceAccountName: database
      containers:
      - name: database
        image: nicholasjackson/fake-service:v0.26.0
        ports:
        - containerPort: 9090
        env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:9090"
        - name: "NAME"
          value: "database-us-east-1"
        - name: "MESSAGE"
          value: "Response from database in us-east-1"
---
apiVersion: consul.hashicorp.com/v1alpha1
kind: ServiceResolver
metadata:
  name: database
spec:
  redirect:
    service: database
